cleanup package.json

--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "timestamp-service",
+  "name": "search-abstraction",
   "version": "1.0.0",
-  "description": "a timestamp service",
+  "description": "search-abstraction",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yiyang89/timestamp-service.git"
+    "url": "git+https://github.com/yiyang89/search-abstraction.git"
   },
   "author": "Yiyang Kok",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/yiyang89/timestamp-service/issues"
+    "url": "https://github.com/yiyang89/search-abstraction/issues"
   },
-  "homepage": "https://github.com/yiyang89/timestamp-service#readme",
+  "homepage": "https://github.com/yiyang89/search-abstraction#readme",
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.2",
-    "mongodb": "^2.2.25",
-    "valid-url": "^1.0.9"
+    "mongodb": "^2.2.25"
   }
 }
